# serializer version: 1
# name: test_r4_asmaddr2_bf16_srvw_golden
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_Bias_UserArgs_MT128x128x167p1kgbp5GBh-RAPYYJv6ATi1VvOF6XRHQBevQD3gV9M=',
      'err': 0,
    }),
  ])
# ---
# name: test_r4_asmaddr2_fp32_golden
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT64x256x16_MI16x16xH3sgG78yt8jfwUeUTA84_5drFnhP_12eufWFKPo7xcE=',
      'err': 0,
    }),
  ])
# ---
